<?xml version="1.0" encoding="utf-8"?>

<!--
  ~     Copyright (C) 2017 Peter Kenji Yamanaka
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/lock_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

      <ImageView
          android:id="@+id/lock_info_icon"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_alignParentStart="true"
          android:layout_marginEnd="16dp"
          android:contentDescription="@string/blank"
          />

      <com.pyamsoft.pydroid.ui.widget.NoLeakTextView
          android:id="@+id/lock_info_package_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_toEndOf="@id/lock_info_icon"
          android:text="@string/package_name"
          />

      <com.pyamsoft.pydroid.ui.widget.NoLeakTextView
          android:id="@+id/lock_info_package_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_toEndOf="@id/lock_info_package_label"
          android:ellipsize="marquee"
          android:gravity="end"
          android:marqueeRepeatLimit="marquee_forever"
          android:maxLines="1"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          android:textColor="@android:color/black"
          />

      <com.pyamsoft.pydroid.ui.widget.NoLeakTextView
          android:id="@+id/lock_info_system_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/lock_info_package_label"
          android:layout_marginEnd="8dp"
          android:layout_toEndOf="@id/lock_info_icon"
          android:text="@string/system"
          />

      <com.pyamsoft.pydroid.ui.widget.NoLeakTextView
          android:id="@+id/lock_info_system"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignEnd="@id/lock_info_package_name"
          android:layout_alignParentEnd="true"
          android:layout_below="@id/lock_info_package_name"
          android:layout_toEndOf="@id/lock_info_system_label"
          android:ellipsize="marquee"
          android:gravity="end"
          android:marqueeRepeatLimit="marquee_forever"
          android:maxLines="1"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          android:textColor="@android:color/black"
          />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        >

      <RadioButton
          xmlns:app="http://schemas.android.com/apk/res-auto"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:text="@string/lock_info_default_explain"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          />

      <RadioButton
          xmlns:app="http://schemas.android.com/apk/res-auto"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:text="@string/lock_info_whitelist_explain"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          app:buttonTint="@color/green500"
          />

      <RadioButton
          xmlns:app="http://schemas.android.com/apk/res-auto"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:text="@string/lock_info_blacklist_explain"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          app:buttonTint="@color/red500"
          />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/lock_info_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:id="@+id/lock_info_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_lockable_activities"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="gone"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lock_info_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />


      </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

  </LinearLayout>

</layout>
