<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2017 Peter Kenji Yamanaka
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/blue700"
      android:orientation="vertical"
      android:paddingTop="?attr/actionBarSize"
      >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

      <com.pyamsoft.pydroid.ui.widget.NoLeakTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:text="@string/terms_of_usage"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@color/material_light_background"
          />

    </ScrollView>

    <LinearLayout
        android:id="@+id/onboarding_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="#4000"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        >

      <Button
          android:id="@+id/onboarding_cancel"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center"
          android:text="@string/cancel"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:textColor="@android:color/white"
          style="?attr/buttonBarNegativeButtonStyle"
          />

      <View
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          />

      <Button
          android:id="@+id/onboarding_accept_terms"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center"
          android:text="@string/accept_terms"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:textColor="@android:color/white"
          style="?attr/buttonBarPositiveButtonStyle"
          />

    </LinearLayout>

  </LinearLayout>

</layout>