<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Peter Kenji Yamanaka
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<layout>

  <androidx.constraintlayout.widget.ConstraintLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingBottom="16dp"
      >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/lock_info_explain_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/lock_type_explanation"
        />

    <RadioButton
        android:id="@+id/lock_info_example_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:clickable="false"
        android:text="@string/lock_info_default_explain"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_info_explain_toolbar"
        />

    <RadioButton
        android:id="@+id/lock_info_example_whitelist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:clickable="false"
        android:text="@string/lock_info_whitelist_explain"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:buttonTint="@color/green500"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_info_example_default"
        />

    <RadioButton
        android:id="@+id/lock_info_example_blacklist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:clickable="false"
        android:text="@string/lock_info_blacklist_explain"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:buttonTint="@color/red500"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_info_example_whitelist"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
