<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2017 Peter Kenji Yamanaka
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<layout>

  <RelativeLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <ImageView
        android:id="@+id/pin_image_go"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/blank"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/pin_image_go"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pin_entry_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/lock_code_hint"
            >

          <com.pyamsoft.pydroid.design.widget.NoLeakTextInputEditText
              android:id="@+id/pin_entry_code_text"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:imeOptions="actionNext"
              android:inputType="textPassword"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:textColor="@android:color/black"
              />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pin_reentry_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/reenter_lock_code_hint"
            >

          <com.pyamsoft.pydroid.design.widget.NoLeakTextInputEditText
              android:id="@+id/pin_reentry_code_text"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:imeOptions="actionNext"
              android:inputType="textPassword"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:textColor="@android:color/black"
              />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pin_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/optional_lock_code_hint"
            >

          <com.pyamsoft.pydroid.design.widget.NoLeakTextInputEditText
              android:id="@+id/pin_hint_text"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:imeOptions="actionGo"
              android:inputType="text"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:textColor="@android:color/black"
              />

        </android.support.design.widget.TextInputLayout>

      </LinearLayout>

    </ScrollView>

  </RelativeLayout>
</layout>