<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Peter Kenji Yamanaka
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <ImageView
          android:id="@+id/pin_image_go"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_alignParentEnd="true"
          android:layout_centerVertical="true"
          android:layout_marginStart="8dp"
          android:contentDescription="@string/blank"
          />

      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:layout_toStartOf="@id/pin_image_go"
          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

          <android.support.design.widget.TextInputLayout
              android:id="@+id/pin_entry_code"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:hint="@string/lock_code_hint"
              >

            <com.pyamsoft.pydroid.design.widget.NoLeakTextInputEditText
                android:id="@+id/pin_entry_code_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                />

          </android.support.design.widget.TextInputLayout>

          <android.support.design.widget.TextInputLayout
              android:id="@+id/pin_reentry_code"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:hint="@string/reenter_lock_code_hint"
              >

            <com.pyamsoft.pydroid.design.widget.NoLeakTextInputEditText
                android:id="@+id/pin_reentry_code_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                />

          </android.support.design.widget.TextInputLayout>

          <android.support.design.widget.TextInputLayout
              android:id="@+id/pin_hint"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:hint="@string/optional_lock_code_hint"
              >

            <com.pyamsoft.pydroid.design.widget.NoLeakTextInputEditText
                android:id="@+id/pin_hint_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                />

          </android.support.design.widget.TextInputLayout>

        </LinearLayout>

      </ScrollView>

    </RelativeLayout>

  </LinearLayout>
</layout>